--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
  "background": {"scripts": ["background.js"]},
- "name": "citiation needed",
+ "name": "citation needed",
  "description": "highlights anonymous sources in news articles",
- "homepage_url": "https://github.com/gka/citiation-needed",
+ "homepage_url": "https://github.com/gka/citation-needed",
  "icons": {
      "16": "icon_16.png",
      "48": "icon_48.png",
